<resources>
    <string name="app_name">NotepadvT</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_send_email">Send e-mail</string>
    <string name="menu_send_sms">Send SMS</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_activity_note_edit">EditNote</string>
    <string name="id">ID</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_none">None</string>
    <string name="sort_title">Title</string>
    <string name="sort_category">Category</string>
    <string name="filter_by">Filter by</string>
    <string name="menu_edit_categories">Edit categories</string>
</resources>
