...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category" />

        <AutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

...
